Using Spark testing library (spark-testing-base) for standardised approach.